# deepshape

src/core/lightning_utils/: callbacks.py
src/core/models/: autoencoder_atlas_2dmiccai.py  bayesianGECO_atlas_2dmiccai.py  bayesianGECO_atlas_3dmiccai.py  bayesian_atlas_2dmiccai.py  bayesian_atlas_3dmiccai.py  bayesian_atlas_iclr_init.py  bayesian_atlas_iclr_init_2.py  bayesian_atlas_iclr_init_3.py  bayesian_debug_3dmiccai.py  bayesian_fixedatlas_3dmiccai.py  diffeomorphism_atlas_2dmiccai.py
src/experiments/: run_brats2d_debug.sh  run_miccai.sh  run_miccai_GECO.sh  run_miccai_GECO2d.sh  run_miccai_GECO3d.sh  run_miccai_bayesian2d.sh  run_miccai_bayesian2d_tests.sh  run_miccai_bayesian3d.sh
src/in_out/: datasets_miccai.py
src/in_out/create_datasets/: segment_bids.sh  (+5 more)
src/notebooks/: 1_generate_mock_brains.ipynb  1_generate_mock_brains__archive_1.ipynb  1_generate_mock_brains__archive_2.ipynb  1_generate_mock_brains__archive_3.ipynb  1_generate_mock_brains__archive_4.ipynb  1_generate_mock_brains__archive_5.ipynb  2_analyze_eyes.ipynb  3_BraTs_to_3dtensors.py  3_normalize_brats_data.py  3_normalize_brats_data__final.py  3_prepare_brats_data.ipynb  3_prepare_brats_data__final.ipynb  3_susan_noise_reduction.c  4_analyze_brats_results.ipynb  5_analyze_eyes_results.ipynb  5_analyze_eyes_results__archive_1.ipynb  5_analyze_eyes_results__archive_2.ipynb  5_analyze_eyes_results__archive_3.ipynb  6_analyze_brains_results.ipynb
src/notebooks/3_match_histograms/: CMakeLists.txt  MatchHistograms.cxx
src/support/: base_miccai.py  base_nips.py  nets_iclr.py  nets_miccai_3d.py
(+23 files in other folders)
